2002-01-11  Werner Koch  <wk@gnupg.org>

	* dn.c (append_atv): Don't write a trailing hash sign.

	* time.c (_ksba_asntime_to_epoch): Kludge to cope with the Y2038
	problem.

	* crl.c (do_hash): New.  Apply the hashing where needed.

2002-01-10  Werner Koch  <wk@gnupg.org>

	* certreq.c, certreq.h: New.
	* keyinfo.c (_ksba_keyinfo_from_sexp): New.

	* der-encoder.c: Removed commented code.

2002-01-09  Werner Koch  <wk@gnupg.org>

	* dn.c (count_quoted_string, parse_rdn, write_escaped): New.
	(_ksba_dn_from_str): Implemented.

	* ber-help.c (_ksba_ber_count_tl): New.

	* util.h (spacep): New.
	(hexdigitp): Now takes a pointer as arg.
	
	* writer.c (do_writer_write): Set the error flag when we are out
	of core.
	(ksba_writer_snatch_mem): New.

2002-01-08  Werner Koch  <wk@gnupg.org>

	* writer.c (ksba_writer_set_mem): New.
	(do_writer_write): Implemented it here.
	(ksba_writer_get_mem): New.

	* tmttv2.asn (CertificationRequestInfo): Added.

2002-01-07  Werner Koch  <wk@gnupg.org>

	* ksba.h (KsbaCRLReason): New.
	* crl.c: Basically works.

2002-01-05  Werner Koch  <wk@gnupg.org>

	* asn1-func.c (_ksba_asn_find_node): Moved code to ..
	(find_node): new function which allows resolving of identifiers.
	(_ksba_asn_expand_tree): Use the resolving find_node here.

	* keyinfo.c (_ksba_parse_algorithm_identifier2): Reset len2 so
	that a given r_parm returns correct values.

	* ksba.h (KsbaCRL): New typedef and prototypes for the CRL functions.
	* crl.c, crl.h: New but not yet complete.

2001-12-20  Werner Koch  <wk@gnupg.org>

	* cms.c (read_and_hash_cont): New.
	(ct_parse_signed_data): Use it here for non-detached signatures.
	* cms-parser.c (_ksba_cms_parse_signed_data_part_1): Store the
	inner content length.
	(_ksba_cms_parse_signed_data_part_2): Add dummy read code for CRLs.

	* cert.c (ksba_cert_set_serial): Changed to return an entire S-Exp
	and not just an octet string.
	* cms.c (ksba_cms_get_issuer_serial): Ditto.

2001-12-18  Werner Koch  <wk@gnupg.org>
